Fix some bugs regarding mobile devices overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html, body {
   font-family: "Space Grotesk", sans-serif;
   background: #0a0a0a;
   color: #f3f4f6;
+  overflow-x: hidden;
 }
 
 @layer utilities {
